cli/tests/059_fs_relative_path_perm.ts.out
[WILDCARD]error: Uncaught PermissionDenied: Access to read "non-existent" required, run again with the --allow-read flag
Deno.readFileSync("non-existent");
     ^
    at [WILDCARD]
